--- a/src/content/projects/tr/fast-writing-game.mdx
+++ b/src/content/projects/tr/fast-writing-game.mdx
@@ -5,52 +5,43 @@ github: "https://github.com/furkandalyan/FastWriting-Game.git"
 tags: ["Python", "Tkinter", "GUI"]
 ---
 
-## ⌨️ Proje Hakkında
+## Proje Özeti
 
 **Fast Writing Game**, kullanıcıların klavye kullanım becerilerini geliştirmek, yazma hızını (WPM) artırmak ve doğruluğunu ölçmek için tasarlanmış, Python ve **Tkinter** tabanlı bir masaüstü uygulamasıdır.
 
 Bu proje, GUI programlama, olay tabanlı (event-driven) mimari ve gerçek zamanlı metin işleme konularında pratik yapmak amacıyla geliştirilmiştir.
 
----
+## Teknik Mimari ve Özellikler
 
-## ✨ Öne Çıkan Özellikler
-
-### 🚀 Gerçek Zamanlı Analiz
+### Gerçek Zamanlı Analiz
 - **Anlık Hata Vurgusu:** Yanlış yazılan karakterler anında kırmızı ile işaretlenir, böylece kullanıcı hatasını hemen fark eder.
 - **WPM (Words Per Minute):** Yazma hızı, dakikada yazılan kelime sayısı olarak hesaplanır ve gösterilir.
 
-### 🏆 Rekabetçi Modlar
+### Rekabetçi Modlar
 - **Sürekli Yazma Modu:** Belirli bir süre boyunca kesintisiz yazarak dayanıklılığınızı test edebilirsiniz.
 - **Skor Tablosu:** En iyi süreler ve skorlar yerel olarak kaydedilir, böylece gelişiminizi takip edebilirsiniz.
 
-### 📝 Dinamik İçerik
+### Dinamik İçerik
 - **Rastgele Cümleler:** Her oyunda farklı cümleler sunularak ezberciliğin önüne geçilir ve gerçek yazma becerisi ölçülür.
 
----
+## Kullanılan Teknolojiler
 
-## 🛠️ Kullanılan Teknolojiler
-
-| Teknoloji | Kullanım Amacı |
+| Teknoloji | Rolü |
 |-----------|----------------|
-| **Python** | Ana programlama dili |
+| **Python 3.x** | Ana geliştirme dili |
 | **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
 | **Time** | Süre ölçümü ve zamanlayıcı |
 | **Random** | Rastgele cümle seçimi |
 
----
+## Kurulum
 
-## 🚀 Nasıl Çalıştırılır?
+Projeyi yerel ortamda çalıştırmak için:
 
-1.  **Repoyu Klonlayın:**
+1.  Depoyu klonlayın:
     ```bash
     git clone https://github.com/furkandalyan/FastWriting-Game.git
     ```
-
-2.  **Oyunu Başlatın:**
+2.  Başlatın:
     ```bash
     python main.py
     ```
-
----
-
-> *"Hızlı yazmak değil, doğru yazmak önemlidir. Hız, doğrulukla birlikte gelir."*
