--- a/src/content/projects/tr/qr-code-generator-scanner.mdx
+++ b/src/content/projects/tr/qr-code-generator-scanner.mdx
@@ -5,61 +5,51 @@ github: "https://github.com/furkandalyan/QR-Code-Generator-Scanner.git"
 tags: ["Python", "Desktop", "QR"]
 ---
 
-## 📱 Proje Hakkında
+## Proje Özeti
 
 **QR Code Generator And Scanner**, kullanıcıların metin veya URL'den QR kod oluşturmasını, renk ve boyut özelleştirmesi yapmasını ve webcam ile gerçek zamanlı QR kod taramasını sağlayan, Python ve **Tkinter** tabanlı modern bir masaüstü uygulamasıdır.
 
 Bu proje, görüntü işleme (OpenCV), GUI tasarımı ve harici kütüphanelerin (qrcode, pyzbar) entegrasyonu konularında pratik yapmak amacıyla geliştirilmiştir.
 
----
+## Teknik Mimari ve Özellikler
 
-## ✨ Öne Çıkan Özellikler
-
-### 🎨 QR Kod Oluşturma
+### QR Kod Oluşturma
 - **Metin/URL Desteği:** İstediğiniz metni veya web adresini QR koda dönüştürebilirsiniz.
 - **Özelleştirme:** QR kodun rengini, arka planını ve boyutunu (piksel cinsinden) değiştirebilirsiniz.
 - **Kaydetme:** Oluşturulan QR kodu PNG veya JPG formatında bilgisayarınıza kaydedebilirsiniz.
 
-### 📷 QR Kod Tarama
+### QR Kod Tarama
 - **Webcam Desteği:** Bilgisayarınızın kamerasını kullanarak gerçek zamanlı QR kod taraması yapabilirsiniz.
 - **Resimden Okuma:** Bilgisayarınızdaki bir resim dosyasından QR kod okuyabilirsiniz.
 - **Panoya Kopyalama:** Taranan veriyi tek tıkla panoya kopyalayabilirsiniz.
 
-### 🚀 Kullanım Kolaylığı
+### Kullanım Kolaylığı
 - **Basit Arayüz:** Karmaşık ayarlarla uğraşmadan, sadece birkaç tıklama ile işlem yapabilirsiniz.
 - **Hızlı İşlem:** QR kod oluşturma ve tarama işlemleri anında gerçekleşir.
 
----
+## Kullanılan Teknolojiler
 
-## 🛠️ Kullanılan Teknolojiler
-
-| Teknoloji | Kullanım Amacı |
+| Teknoloji | Rolü |
 |-----------|----------------|
-| **Python** | Ana programlama dili |
+| **Python 3.x** | Ana geliştirme dili |
 | **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
 | **Qrcode** | QR kod oluşturma |
 | **OpenCV** | Görüntü işleme ve webcam erişimi |
 | **Pyzbar** | QR kod ve barkod okuma |
 
----
+## Kurulum
 
-## 🚀 Nasıl Çalıştırılır?
+Projeyi yerel ortamda çalıştırmak için:
 
-1.  **Repoyu Klonlayın:**
+1.  Depoyu klonlayın:
     ```bash
     git clone https://github.com/furkandalyan/QR-Code-Generator-Scanner.git
     ```
-
-2.  **Gerekli Kütüphaneleri Yükleyin:**
+2.  Gerekli bağımlılıkları yükleyin:
     ```bash
     pip install -r requirements.txt
     ```
-
-3.  **Uygulamayı Başlatın:**
+3.  Başlatın:
     ```bash
     python main.py
     ```
-
----
-
-> *"QR kodlar, fiziksel dünyayı dijital dünyaya bağlayan köprülerdir."*
