--- a/src/content/projects/tr/smart-data-analyzer.mdx
+++ b/src/content/projects/tr/smart-data-analyzer.mdx
@@ -5,58 +5,48 @@ github: "https://github.com/furkandalyan/SmartDataAnalyzer.git"
 tags: ["Python", "Streamlit", "Data Science"]
 ---
 
-## 📊 Proje Hakkında
+## Proje Özeti
 
 **Smart Data Analyzer**, veri analizi süreçlerini demokratikleştirmek için geliştirilmiş, Python ve **Streamlit** tabanlı modern bir web uygulamasıdır. Kullanıcıların herhangi bir kod yazmadan CSV, Excel veya JSON dosyalarını yükleyerek anında içgörü (insight) elde etmesini sağlar.
 
 Bu proje, veri bilimi araçlarını (Pandas, Plotly) kullanıcı dostu bir arayüzle birleştirerek, teknik olmayan kullanıcıların bile karmaşık veri setlerini keşfetmesine olanak tanır.
 
----
+## Teknik Mimari ve Özellikler
 
-## ✨ Öne Çıkan Özellikler
-
-### 📂 Çoklu Format Desteği
+### Çoklu Format Desteği
 - **CSV, Excel, JSON:** Farklı formatlardaki veri dosyalarını sorunsuz bir şekilde yükleyebilir ve işleyebilirsiniz.
 - **Otomatik Tip Algılama:** Sütunların sayısal mı, kategorik mi yoksa tarih mi olduğunu otomatik olarak algılar.
 
-### 📈 Otomatik Analiz ve Görselleştirme
+### Otomatik Analiz ve Görselleştirme
 - **Hızlı İstatistikler:** Veri setinin özeti (ortalama, medyan, eksik veri oranı vb.) anında sunulur.
 - **İnteraktif Grafikler:** Plotly kütüphanesi kullanılarak dinamik histogramlar, scatter plotlar ve korelasyon matrisleri oluşturulur.
 
-### 📄 Raporlama
+### Raporlama
 - **PDF Dışa Aktarma:** Yapılan analizleri ve oluşturulan grafikleri tek tıkla profesyonel bir PDF raporu olarak indirebilirsiniz.
 
----
+## Kullanılan Teknolojiler
 
-## 🛠️ Kullanılan Teknolojiler
-
-| Teknoloji | Kullanım Amacı |
+| Teknoloji | Rolü |
 |-----------|----------------|
-| **Python** | Ana programlama dili |
+| **Python 3.x** | Ana geliştirme dili |
 | **Streamlit** | Web arayüzü ve interaktif bileşenler |
 | **Pandas** | Veri manipülasyonu ve analizi |
 | **Plotly** | İnteraktif veri görselleştirme |
 | **FPDF** | PDF rapor oluşturma |
 
----
+## Kurulum
 
-## 🚀 Nasıl Çalıştırılır?
+Projeyi yerel ortamda çalıştırmak için:
 
-1.  **Repoyu Klonlayın:**
+1.  Depoyu klonlayın:
     ```bash
     git clone https://github.com/furkandalyan/SmartDataAnalyzer.git
     ```
-
-2.  **Gerekli Kütüphaneleri Yükleyin:**
+2.  Gerekli bağımlılıkları yükleyin:
     ```bash
     pip install -r requirements.txt
     ```
-
-3.  **Uygulamayı Başlatın:**
+3.  Uygulamayı başlatın:
     ```bash
     streamlit run app.py
     ```
-
----
-
-> *"Veri, yeni petroldür; ancak işlenmediği sürece bir değeri yoktur."*
