--- a/src/content/projects/tr/tic-tac-toe.mdx
+++ b/src/content/projects/tr/tic-tac-toe.mdx
@@ -2,53 +2,44 @@
 title: "Tic-Tac-Toe"
 summary: "Python ile geliştirilmiş, hem CLI hem de GUI arayüzü sunan, çoklu oyuncu ve AI modlarına sahip Tic-Tac-Toe oyunu."
 github: "https://github.com/furkandalyan/Tic-Tac-Toe.git"
-tags: ["Python", "Tkinter", "Game Dev"]
+tags: ["Python", "Tkinter", "Game Development"]
 ---
 
-## 🎮 Proje Hakkında
+## Proje Özeti
 
 **Tic-Tac-Toe**, klasik XOX oyununun Python ile geliştirilmiş, hem komut satırı (CLI) hem de grafiksel kullanıcı arayüzü (GUI) sunan kapsamlı bir versiyonudur. Bu proje, oyun mantığını, yapay zeka (AI) algoritmalarını ve farklı arayüz tasarımlarını öğrenmek amacıyla geliştirilmiştir.
 
----
+## Teknik Mimari ve Özellikler
 
-## ✨ Öne Çıkan Özellikler
-
-### 🤖 Oyun Modları
+### Oyun Modları
 - **Çoklu Oyuncu (Multiplayer):** Arkadaşınızla aynı bilgisayarda oynayabilirsiniz.
 - **Yapay Zeka (AI):** Bilgisayara karşı oynayarak stratejinizi test edebilirsiniz.
 
-### 🎨 Esnek Arayüz
+### Esnek Arayüz
 - **CLI (Komut Satırı):** Minimalist bir deneyim için terminal üzerinden oynanabilir.
 - **GUI (Tkinter):** Modern bir arayüz, tema değiştirme seçenekleri ve tam ekran modu sunar.
 
-### 📊 Veri Yönetimi
+### Veri Yönetimi
 - **CSV Dışa Aktarma:** Oyun sonuçlarını (kazanan, hamle sayısı vb.) CSV formatında kaydederek analiz edebilirsiniz.
 
----
+## Kullanılan Teknolojiler
 
-## 🛠️ Kullanılan Teknolojiler
-
-| Teknoloji | Kullanım Amacı |
+| Teknoloji | Rolü |
 |-----------|----------------|
-| **Python** | Ana programlama dili |
+| **Python 3.x** | Ana geliştirme dili |
 | **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
 | **CSV** | Oyun verilerinin kaydedilmesi |
 | **Random** | AI hamlelerinin belirlenmesi |
 
----
+## Kurulum
 
-## 🚀 Nasıl Çalıştırılır?
+Projeyi yerel ortamda çalıştırmak için:
 
-1.  **Repoyu Klonlayın:**
+1.  Depoyu klonlayın:
     ```bash
     git clone https://github.com/furkandalyan/Tic-Tac-Toe.git
     ```
-
-2.  **Oyunu Başlatın:**
+2.  Başlatın:
     ```bash
     python main.py
     ```
-
----
-
-> *"Basit kurallar, karmaşık stratejiler doğurur."*
