--- a/src/content/projects/tr/password-vault.mdx
+++ b/src/content/projects/tr/password-vault.mdx
@@ -5,60 +5,50 @@ github: "https://github.com/furkandalyan/Password-Vault.git"
 tags: ["Python", "Security", "Desktop"]
 ---
 
-## 🔑 Proje Hakkında
+## Proje Özeti
 
 **Password Vault**, kullanıcıların tüm parolalarını tek bir güvenli yerde saklamasını sağlayan, Python ve **Tkinter** tabanlı modern bir masaüstü uygulamasıdır. AES-256 şifreleme algoritması kullanılarak geliştirilen bu proje, kategori düzeni, parola güç ölçeri ve QR kod paylaşımı gibi özelliklerle hem güvenlik hem de kullanım kolaylığı sunar.
 
 Bu proje, veritabanı yönetimi (SQLite), kriptografi ve GUI tasarımı konularında pratik yapmak amacıyla geliştirilmiştir.
 
----
+## Teknik Mimari ve Özellikler
 
-## ✨ Öne Çıkan Özellikler
-
-### 🛡️ Güvenli Depolama
+### Güvenli Depolama
 - **AES-256 Şifreleme:** Tüm parolalar veritabanında şifreli olarak saklanır, böylece veritabanı dosyası çalınsa bile veriler okunamaz.
 - **Master Password:** Uygulamaya erişim tek bir ana parola ile sağlanır.
 
-### 📂 Organizasyon ve Yönetim
+### Organizasyon ve Yönetim
 - **Kategori Düzeni:** Parolalarınızı "Sosyal Medya", "İş", "Finans" gibi kategorilere ayırarak kolayca bulabilirsiniz.
 - **Arama ve Filtreleme:** Binlerce parola arasından istediğinizi saniyeler içinde bulabilirsiniz.
 
-### 🚀 Ekstra Özellikler
+### Ekstra Özellikler
 - **Parola Güç Ölçeri:** Oluşturduğunuz parolaların ne kadar güçlü olduğunu anında gösterir.
 - **QR Kod Paylaşımı:** Parolalarınızı mobil cihazınıza kolayca aktarmak için QR kod oluşturabilirsiniz.
 - **Dark/Light Tema:** Göz yormayan modern bir arayüz sunar.
 
----
+## Kullanılan Teknolojiler
 
-## 🛠️ Kullanılan Teknolojiler
-
-| Teknoloji | Kullanım Amacı |
+| Teknoloji | Rolü |
 |-----------|----------------|
-| **Python** | Ana programlama dili |
+| **Python 3.x** | Ana geliştirme dili |
 | **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
-| **SQLite** | Veritabanı yönetimi |
+| **SQLite** | Veri saklama ve yönetimi |
 | **PyCryptodome** | Kriptografik işlemler (AES) |
 | **Qrcode** | QR kod oluşturma |
 
----
+## Kurulum
 
-## 🚀 Nasıl Çalıştırılır?
+Projeyi yerel ortamda çalıştırmak için:
 
-1.  **Repoyu Klonlayın:**
+1.  Depoyu klonlayın:
     ```bash
     git clone https://github.com/furkandalyan/Password-Vault.git
     ```
-
-2.  **Gerekli Kütüphaneleri Yükleyin:**
+2.  Gerekli bağımlılıkları yükleyin:
     ```bash
     pip install -r requirements.txt
     ```
-
-3.  **Uygulamayı Başlatın:**
+3.  Başlatın:
     ```bash
     python main.py
     ```
-
----
-
-> *"En güvenli parola, hatırlayamadığınız paroladır."*
