--- a/src/content/projects/tr/pdf-tool-box.mdx
+++ b/src/content/projects/tr/pdf-tool-box.mdx
@@ -5,68 +5,56 @@ github: "https://github.com/furkandalyan/PDF-TOOL-BOX.git"
 tags: ["Python", "Tkinter", "Desktop", "OCR"]
 ---
 
-## 📄 Proje Hakkında
+## Proje Özeti
 
 **PDF TOOL BOX**, PDF dosyalarını birleştirmek, bölmek, şifrelemek, döndürmek ve metin çıkarmak gibi işlemleri kolaylaştıran, Python ve **Tkinter** tabanlı modern bir masaüstü uygulamasıdır. Kullanıcı dostu arayüzü ve güçlü özellikleri ile PDF yönetimini basitleştirir.
 
 Bu proje, dosya işlemleri, GUI tasarımı ve harici kütüphanelerin (PyPDF2, Tesseract OCR) entegrasyonu konularında pratik yapmak amacıyla geliştirilmiştir.
 
----
+## Teknik Mimari ve Özellikler
 
-## ✨ Öne Çıkan Özellikler
-
-### 🛠️ Kapsamlı PDF Araçları
+### Kapsamlı PDF Araçları
 - **Birleştirme (Merge):** Birden fazla PDF dosyasını tek bir dosyada birleştirir.
 - **Bölme (Split):** PDF dosyalarını sayfa aralıklarına veya yer imlerine göre böler.
 - **Sayfa Silme:** İstenmeyen sayfaları PDF'den kaldırır.
 - **Döndürme (Rotate):** Sayfaları 90, 180 veya 270 derece döndürür.
 
-### 🔒 Güvenlik ve Şifreleme
+### Güvenlik ve Şifreleme
 - **Toplu Şifreleme:** Birden fazla PDF dosyasını aynı anda şifreleyerek güvenliğini sağlar.
 - **Şifre Kaldırma:** Şifreli PDF dosyalarının şifresini kaldırır (şifre biliniyorsa).
 
-### 📝 Metin İşleme (OCR)
+### Metin İşleme (OCR)
 - **OCR Desteği:** Tesseract OCR motoru kullanılarak taranmış PDF dosyalarından metin çıkarılır.
 - **Metadata Düzenleme:** PDF dosyasının başlık, yazar, konu gibi meta verilerini düzenler.
 
-### 🎨 Modern Arayüz
+### Modern Arayüz
 - **Koyu Tema (Dark Mode):** Göz yormayan modern bir arayüz sunar.
 - **Undo/Redo:** Yapılan işlemleri geri alma ve yineleme özelliği ile hata yapma korkusunu ortadan kaldırır.
 
----
+## Kullanılan Teknolojiler
 
-## 🛠️ Kullanılan Teknolojiler
-
-| Teknoloji | Kullanım Amacı |
+| Teknoloji | Rolü |
 |-----------|----------------|
-| **Python** | Ana programlama dili |
+| **Python 3.x** | Ana geliştirme dili |
 | **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
 | **PyPDF2** | PDF işlemleri (birleştirme, bölme, şifreleme) |
 | **Tesseract OCR** | Görüntüden metin çıkarma |
 | **Pillow (PIL)** | Görüntü işleme |
 
----
+## Kurulum
 
-## 🚀 Nasıl Çalıştırılır?
+Projeyi yerel ortamda çalıştırmak için:
 
-1.  **Repoyu Klonlayın:**
+1.  Depoyu klonlayın:
     ```bash
     git clone https://github.com/furkandalyan/PDF-TOOL-BOX.git
     ```
-
-2.  **Gerekli Kütüphaneleri Yükleyin:**
+2.  Gerekli bağımlılıkları yükleyin:
     ```bash
     pip install -r requirements.txt
     ```
-
-3.  **Tesseract OCR Kurulumu:**
-    - Tesseract OCR'ı sisteminize kurun ve yolunu belirtin.
-
-4.  **Uygulamayı Başlatın:**
+3.  Tesseract OCR'ı sisteminize kurun ve yolunu belirtin.
+4.  Başlatın:
     ```bash
     python main.py
     ```
-
----
-
-> *"Dijital dünyada kağıtların yerini PDF'ler aldı, onları yönetmek ise artık çok daha kolay."*
